--- a/src/css/todo_style.css
+++ b/src/css/todo_style.css
@@ -14,13 +14,13 @@
 }
 
 body {
-  background-color: var(--swatch-foundation);
+  background-color: #F5F5F5;
   font-family: 'Lexend Exa';
 }
 
 div.banner {
   background-image: linear-gradient(to bottom,         
-  #b8b808, #636723);
+  #2196f3 , #0d47a1 );
   color: white;
   font-size: 48pt;
   border-color: black;
@@ -34,6 +34,11 @@ div.banner {
 
 .home_new_list_button {
   font-size: 32pt;
+  margin: auto;
+  padding: 10%;
+  text-align: center;
+  vertical-align: center;
+  color: #FFFFFF;
 }
 .home_new_list_button:hover {
   box-shadow: 1px 2px;
